added indonesian language

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -36,7 +36,7 @@ sidebar:
 
       - idiom: Indonesian
         level: Conversation
-        
+
       - idiom: Nepali
         level: Beginner
 
@@ -163,7 +163,7 @@ projects:
 
       - title: Usoft Store
         link: "https://usoft.store"
-        tagline: "This online shop is made with Shopify. I've experience in Ruby so designing made so fun for this task. This online shop is going to be the second largest online shop in Nepal after Daraz."
+        tagline: "This online shop is made with Shopify. I've experience in Ruby so designing made so fun for this task. This website is going to be the second largest online shop in Nepal after Daraz."
 
       - title: Trekking Top Nepal
         link: "https://trekkingtopnepal.com"
