updated about section

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -73,13 +73,15 @@ sidebar:
         link: "https://mybetterweb.site/#/2018/10/30/holiday-video-editing"
 
 career-profile:
-    title: Career Profile
+    title: About MyBetterWeb
     summary: |
-      Formerly founded Eco OEM - to better serve the ever growing health and beauty industry. The aim is to help more business start ups and small businesses by outsource their production to us, thus cut down on overhead costs and they can focus more on making sales. The company has been sold to after 2 and a half years of operation to a Multinational company in Malaysia.
+      Francis, the founder of the MyBetterWeb has more than 10 years of experience helping brands stand out in the crowded digital space. In fact, his made his first online business at the age of 10 years old by selling dropshipping on eBay. Since then he has developed an interest in digital marketing and computer programming.
 
-      Shortly after that, I took up a position and worked as part of the key role in my family business to promote Malaysia to the world through Malaysian curries. It's exciting when business and food combined!
+      With the strong teamwork of digital professional includes digital strategists, frontend, backend and full stack developers. All of our projects are undertaken from our experts, utilizing our wide array of talent to create unique campaigns. The team members at MyBetterWeb are dedicated, creative, and interesting people you will ever meet, exactly the people you would love to work with. We are motivated about the work we do for our client’s with its challenges and requirements to serve with the help of our expert and skilled professional team member’s.
 
-      At the present, I' on traveling to various countries and I fell in love with Nepal. I set up my own freelancing company in Kathmandu mainly focusing on providing website development and digital marketing services to local businesses.
+      With a vast knowledge of E-world, MyBetterWeb as a website developing and online marketing startup craft execute an unbeaten technologically driven business solution that boosts your existing business model. You will see multiple upcoming online marketing companies in South East Asia especially Malaysia, but we assure you that our services are and will be far ahead than anyone in this sector.
+
+      We ensure authoritative Internet presence for all companies who are endeavoring to establish a web site and develop innovative e-business solutions for building up organizational growth. MyBetterWeb aims on delivering solutions and services regarding your requirements keeping in mind our high quality standards and enhancing customer satisfaction in the process. Our mission is to break barriers between day and night through innovative skills, energy and technology, the aim of our business is to always provide a quality service given the limited resources and time.
 
 education:
     - degree: Associate of Arts and Sciences - AAS
@@ -99,7 +101,7 @@ experiences:
       time: 2018 - Present
       company: MyBetterWeb, Kathmandu
       details: |
-        As a Digital Marketing Strategists take the lead in helping our clients figure out how to best use the internet to achieve their international growth objectives. I  work closely with the marketing and brand strategists to develop an international web presence architecture and online marketing strategy. This provides a clear roadmap that orchestrates all relevant digital channels and tactics (i.e. websites, content marketing, networking on social media, e-commerce, search and social advertising, SEO, marketing automation, apps, media/blogger outreach, etc.) into one actionable plan.  In practice, these are the tasks I need to do:
+        As a Digital Marketing Strategists, my main task is to take the lead in helping our clients figure out how to best use the internet to achieve their international growth objectives. I  work closely with the marketing and brand strategists to develop an international web presence architecture and online marketing strategy. This provides a clear roadmap that orchestrates all relevant digital channels and tactics (i.e. websites, content marketing, networking on social media, e-commerce, search and social advertising, SEO, marketing automation, apps, media/blogger outreach, etc.) into one actionable plan.  In practice, these are the tasks I need to do:
 
         - Perform detailed desktop research into our clients, their category, and competitors across multiple markets.
         - De-construct competitive best practices in digital marketing and create benchmarks.
