updated about section

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -18,12 +18,14 @@ sidebar:
     website: mybetterweb.site #do not add http://
     linkedin: peranakafrancis
     github: peranakafrancis
+    facebook: mybetterweb.site
+    instagram: mybetterweb.site
     gitlab:
     bitbucket:
     twitter: '@peranakafrancis'
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
-    location:  Kuala Lumpur & Kathmandu
+    location: Malaysia & Nepal
 
     languages:
       - idiom: English
@@ -75,13 +77,13 @@ sidebar:
 career-profile:
     title: About MyBetterWeb
     summary: |
-      Francis, the founder of the MyBetterWeb has more than 10 years of experience helping brands stand out in the crowded digital space. In fact, his made his first online business at the age of 10 years old by selling dropshipping on eBay. Since then he has developed an interest in digital marketing and computer programming.
+      Francis Tan, the founder of the MyBetterWeb has more than 10 years of experience helping brands stand out in the crowded digital space. In fact, he made his first online business success at the age of 10 by selling dropshipping items on eBay. Since then he has developed an interest in digital marketing and computer programming.
 
-      With the strong teamwork of digital professional includes digital strategists, frontend, backend and full stack developers. All of our projects are undertaken from our experts, utilizing our wide array of talent to create unique campaigns. The team members at MyBetterWeb are dedicated, creative, and interesting people you will ever meet, exactly the people you would love to work with. We are motivated about the work we do for our client’s with its challenges and requirements to serve with the help of our expert and skilled professional team member’s.
+      With the strong teamwork of digital professional includes digital strategists, frontend, backend and full stack developers. All of our projects are undertaken from our experts, utilizing our wide array of talent to create unique campaigns.
 
-      With a vast knowledge of E-world, MyBetterWeb as a website developing and online marketing startup craft execute an unbeaten technologically driven business solution that boosts your existing business model. You will see multiple upcoming online marketing companies in South East Asia especially Malaysia, but we assure you that our services are and will be far ahead than anyone in this sector.
+      The team members at MyBetterWeb are dedicated, creative, and interesting people you will ever meet, exactly the people you would love to work with. We are motivated about the work we do for our client’s with its challenges and requirements to serve with the help of our expert and skilled professional team member’s.
 
-      We ensure authoritative Internet presence for all companies who are endeavoring to establish a web site and develop innovative e-business solutions for building up organizational growth. MyBetterWeb aims on delivering solutions and services regarding your requirements keeping in mind our high quality standards and enhancing customer satisfaction in the process. Our mission is to break barriers between day and night through innovative skills, energy and technology, the aim of our business is to always provide a quality service given the limited resources and time.
+      MyBetterWeb aims on delivering solutions and services regarding your requirements keeping in mind our high quality standards and enhancing customer satisfaction in the process. Our mission is to break barriers between day and night through innovative skills, energy and technology, the aim of our business is to always provide a quality service given the limited resources and time.
 
 education:
     - degree: Associate of Arts and Sciences - AAS
