--- a/_data/data.yml
+++ b/_data/data.yml
@@ -87,10 +87,10 @@ career-profile:
 
 education:
     - degree: Associate of Arts and Sciences - AAS
-      university: Olympia College
+      university: Columbia International College
       time: 2007 - 2008
       details: |
-        I obtained a Diploma of Marketing Management from Olympia College after a year of study.
+        I obtained a Diploma of Internet Marketing from Columbia International College of UK through part time studying.
 
     - degree: Bachelor of Technology - BTech
       university: The Hong Kong University of Science and Technology
