added time lapse video

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -74,7 +74,10 @@ sidebar:
       - item: Holiday Video Editing
         link: "https://mybetterweb.site/#/2018/10/30/holiday-video-editing"
 
-      - item: "Animated Video Explainer"
+      - item: Time Lapse Video Editing
+        link: "https://mybetterweb.site/#/2018/11/30/time-lapse-video-editing"
+
+      - item: Animated Video Explainer
         link: "https://mybetterweb.site/#/2018/10/05/animated-video-editing"
 
 
