--- a/_data/data.yml
+++ b/_data/data.yml
@@ -44,6 +44,9 @@ sidebar:
         level: Beginner
 
     interests:
+      - item: A.I Chatbot for Hotel
+        link: "https://mybetterweb.site/#/2018/12/30/chatbot-automation"
+
       - item: Responsive Website
         link: "https://mybetterweb.site/#/2018/08/13/responsive-website"
 
