--- a/_config.yml
+++ b/_config.yml
@@ -1,31 +1,26 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title: About MyBetterWeb
+title: Francis Tan's CV Online
 url: 'https://peranakanfrancis.github.io/online-cv/'
-description: MyBetterWeb is a managed by a solo frontend developer that is focused on building mobile optimized website with higher conversion rate. We are confident your website will work all the way up to the top.
+description: This is my personal resume build with Jekyll, a fork from Github.
 baseurl: '' #change it according to your repository name
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
-theme_skin: turquoise # blue turquoise green berry orange ceramic
-chrome_mobile_color: fa2a7b #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
+theme_skin: blue # blue turquoise green berry orange ceramic
+chrome_mobile_color: '#1471c4' #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
 destination: _site
 
 # Tracker
-analytics: UA-129774437-2
+analytics:
 
 social:
   name: peranakafrancis
   links:
-    - https://twitter.com/peranakafrancis
     - https://www.facebook.com/peranakanfrancis/
     - https://www.linkedin.com/in/peranakafrancis
-    - https://instagram.com/mybetterweb.site/
     - https://github.com/peranakafrancis
-    - https://keybase.io/peranakafrancis
-    - https://wa.link/pf0lud    
-    - https://m.me/mybetterweb.site
 twitter:
-  username: peranakanfrancis
+  username: Francis36615257
   card: summary
 
 # jekyll gems
@@ -36,7 +31,7 @@ plugins:
 
 profile: true
 livereload: true
-time_zone: Asia/Kathmandu
+time_zone: Asia/Kuala_Lumpur
 source:
 markdown: kramdown
 kramdown:
